# niri

./: .gitignore  README.md  config.kdl  justfile  niri_spawnjump.py  pixi.toml  pkglist  pyproject.toml  virt.pkglist
.claude/skills/niri/: SKILL.md
conf.d/: autostart.kdl  binds.kdl  env.kdl  input.kdl  layout.kdl  misc.kdl  output.kdl  rules.kdl
dms/: colors.kdl
scripts/: KNOWN_ISSUES.md  README.md  autostart.sh  cpu-monitor.sh  handlers.py  niri-auto-width.py  niri-auto-width.sh  niri_overview_bind.sh  niri_tile_to_n.py  niri_workspace_helper.py  screenshot.sh  swaybg_helper.sh  wallpaper_per_workspace.py  wvkbd_toggle.sh
src/niri/: __init__.py  _socket.py  _types.py  cli.py  events.py  ipc.py
