[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niri"
version = "0.1.0"
description = "Niri Socket Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.scripts]
niri = "niri.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/niri"]
